# aggressor

./: .gitignore  README.md  config.example.yaml  config.hpcbuild.yaml  pyproject.toml
src/hpc_perf_monitor/: __init__.py  __main__.py  ai_diff_analyzer.py  analyzer.py  benchmark_runner.py  bisector.py  build_manager.py  cli.py  config.py  git_manager.py  metrics_analyzer.py  report_generator.py
src/hpc_perf_monitor/parsers/: __init__.py  osu_bench.py  ucc_perftest.py
src/hpc_perf_monitor/templates/: report.html.j2  report.md.j2  slurm_job.sh.j2  slurm_job_rock.sh.j2  slurm_job_thea.sh.j2
