[project]
name = "hpc-perf-monitor"
version = "0.1.0"
description = "HPC performance monitoring and regression detection tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ilya Kryukov", email = "ilyakrukov@gmail.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "jinja2>=3.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=6.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "types-setuptools>=78.1.0",
    "types-tabulate>=0.9.0",
]

[project.scripts]
hpc-perf-monitor = "hpc_perf_monitor.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "types-setuptools>=78.1.0",
    "types-tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["hpc_perf_monitor"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
addopts = "-ra -q --cov=hpc_perf_monitor --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py" 